# beginners-data-workshop

./: .gitignore  .pre-commit-config.yaml  .venv  1. Beginning with Python.ipynb  1_Introduction_à_Python.ipynb  2. First steps with Pandas.ipynb  2_Analyse_de_données_avec_pandas.ipynb  3.1 Visualization with Matplotlib.ipynb  3.2 Visualization with Seaborn.ipynb  3_1_Visualisation_des_données_avec_Matplotlib_.ipynb  3_2_Visualisation_des_données_avec_Seaborn.ipynb  4. More Python basics.ipynb  4_Plus_de_Python.ipynb  5. More Pandas.ipynb  5_Plus_de_pandas.ipynb  CHANGELOG.md  README.md  linestripper.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  content_suggestion.md  general_question.md
data/Iris/: Iris.csv  Iris_data.csv
data/Penguins/: penguins.csv
data/food_training/: languages.csv  training_2014.csv  training_2015.csv  training_2016.csv
notebooks/: .1. Beginning with Python.ipynb.sage-jupyter2  .2. First steps with Pandas.ipynb.sage-jupyter2  .3.1 Visualisation with Matplotlib.ipynb.sage-jupyter2  .3.2 Visulization with seaborn.ipynb.sage-jupyter2  .4. More Python basics.ipynb.sage-jupyter2  .5. More Pandas.ipynb.sage-jupyter2  1. Beginning with Python.ipynb  1. Comenzando con Python.ipynb  2. First steps with Pandas.ipynb  2. Primeros pasos con Pandas.ipynb  3.1 Visualización con Matplotlib.ipynb  3.1 Visualization with Matplotlib.ipynb  3.2 Visualización con Seaborn.ipynb  3.2 Visualization with Seaborn.ipynb  4. More Python basics.ipynb  4. Más conceptos básicos de Python.ipynb  5.  Más pandas.ipynb  5. More Pandas.ipynb
notebooks-WORK/: 1-1. Beginning with Python.ipynb  1-1. kame-chan-Beginning with Python.ipynb  1-2. Beginning with Python.ipynb  1-2. sugita-Beginning with Python.ipynb  1-3. Beginning with Python.ipynb  1-4. Beginning with Python.ipynb  1-5. Selina_Beginning with Python.ipynb  1-6.Maaya-Beginning with Python.ipynb  1-7. Beginning with Python.ipynb  1-8. Beginning with Python.ipynb  2-1. First steps with Pandas.ipynb  2-2. First steps with Pandas.ipynb  2-3. First steps with Pandas.ipynb  2-4. First steps with Pandas.ipynb  2-5. First steps with Pandas.ipynb  README.md
solutions/: 01_01.py  01_02.py  01_03.py  01_04.py  01_05.py  01_06.py  01_07.py  01_08.py  01_10.py  01_11.py  01_12.py  01_13.py  01_14.py  01_15.py  01_16.py  01_17.py  01_18.py  01_19.py  01_20.py  01_21.py  01_22.py  01_23.py  01_24.py  01_25.py  01_26.py  01_27.py  01_28.py  01_29.py  01_30.py  01_31.py  01_32.py  01_33.py  01_34.py  01_35.py  01_36.py  01_37.py  01_38.py  02_02.py  02_03.py  02_04.py  (+78 more)
