###########
# 📜 Poetry
###########
[tool.poetry]
name = "beginners-data-workshop"
version = "0.1.0"
description = "Humble Data aims to increase inclusivity and provide a safe community for Python and Data Science. We organise free workshops for people who are outside of the mainstream in the data science and tech industry."
authors = ["Humble Data <contact@humbledata.org>"]
license = "Creative Commons Attribution-ShareAlike 4.0 International License"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Intended Audience :: Education",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    # Add more packages here, e.g.
    # { include = "module_name", from = "package_name" },
]

[tool.poetry.dependencies]
python = "^3.9.13"
# Everything below here is alphabetically sorted
# We try to keep this environment in sync with the CoCalc Python 3 (system-wide) environment at
# https://cocalc.com/doc/software-python.html
black = "^22.3.0"
joblib = "1.1.1"
ipykernel = "^6.15.1"
jupyter-black = "^0.3.1"
jupyter-contrib-nbextensions = "0.5.1"
jupyterlab = "3.4.2"
matplotlib = "3.5.2"
pandas = "1.4.2"
scikit-learn = "1.1.1"
seaborn = "0.11.2"
tqdm = "4.64.0"

[tool.poetry.dev-dependencies]
# Everything below here is alphabetically sorted
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.2.1"
flake8-fixme = "^1.1.1"
flake8-implicit-str-concat = "^0.2.0"
flake8-print = "^4.0.1"
flake8-return = "^1.1.3"
isort = "4.3.21"
nbdime = "^3.1.1"
pip-audit = "^1.1.2"
poetryup = "^0.7.2"
pre-commit = "^2.19.0"
pylint = "2.5.3"
pytest = "^7.1.2"
treon = "^0.1.3"
typer = "<0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


############
# ✅ Linters
############
[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
default_section = "THIRDPARTY"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.pylint.MASTER]
ignore = ["05_34.py"]
ignore-paths = [".git"]
load-plugins = []

[tool.pylint."MESSAGES CONTROL"]
enable = "all"
max-module-lines = 2000
max-line-length = 100
max-locals = 50
min-similarity-lines = 150
max-statements = 89
max-args = 22
max-branches = 17
good-names = ["i", "j", "k", "x"]
disable = [
    "expression-not-assigned",
    "invalid-name",
    "missing-final-newline",
    "missing-function-docstring",
    "missing-module-docstring",
    "pointless-statement",
    "syntax-error",
    "undefined-variable",
    "unused-import",
    "used-before-assignment",
]
logging-format-style = "new"
